# python-open-source-template

./: .codespell-ignore-words.txt  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  SECURITY.md  pyproject.toml  setup.py  test.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  continuous-deployment.yaml  dependabot-automerge.yaml  docs.yaml  test.yaml
docs/: conf.py  index.md
tests/: __init__.py  test_example.py
